# telco-user-sentiments

./: LICENSE  sentiment-analysis-basic_algo.ipynb
data_pipeline/: README.md  pyproject.toml
data_pipeline/sentiment/: docker-compose-airflow.yml  news_api.py  requirements.txt
data_pipeline/sentiment/dags/: el_airflow_dag.py  el_airflow_dag_cryptocurrency.py  el_airflow_dag_sport.py  el_airflow_sport_tennis.py  etl_pipeline.py  etl_pipeline_cryptocurrency.py  etl_pipeline_sport.py
data_pipeline/sentiment/dags/crypto/: el_airflow_crypto_avalanche.py  el_airflow_crypto_binance_coin.py  el_airflow_crypto_bitcoin.py  el_airflow_crypto_cardano.py  el_airflow_crypto_dogecoin.py  el_airflow_crypto_polkadot.py  el_airflow_crypto_ripple.py  el_airflow_crypto_shiba_inu.py  el_airflow_crypto_solana.py  el_airflow_dag_cryptocurrency.py  etl_pipeline_crypto.py  master_dag_crypto.py
data_pipeline/sentiment/dags/electric_vehicles/: el_airflow_ev_audi_etron.py  el_airflow_ev_bmwi3.py  el_airflow_ev_chevrolet_bolt.py  el_airflow_ev_ford.py  el_airflow_ev_hyundai_kona.py  el_airflow_ev_kia_niro.py  el_airflow_ev_lucid_air.py  el_airflow_ev_nissan_leaf.py  el_airflow_ev_porsche_taycan.py  el_airflow_ev_tesla.py  etl_pipeline_ev.py  master_dag_ev.py
data_pipeline/sentiment/dags/sport/: el_airflow_sport_badminton.py  el_airflow_sport_baseball.py  el_airflow_sport_boxing.py  el_airflow_sport_cricket.py  el_airflow_sport_football.py  el_airflow_sport_formula1.py  el_airflow_sport_rugby.py  el_airflow_sport_volleyball.py  etl_pipeline_sport.py  master_dag_sport.py
(+34 files in other folders)
