[tool.poetry]
name = "Data_pipeline for trending data sentimental analysis"
version = "0.1.0"
description = ""
authors = ["Omotosho Ayomide ayomidemtsh@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
